# mdformat-tables

./: .pre-commit-config.yaml  .pre-commit-test.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
mdformat_tables/: __init__.py  plugin.py
tests/: fixtures-compact.md  fixtures.md  generate_gfm_tables_spec.sh  gfm_tables_spec.commit-85d895289c5ab67f988ca659493a64abb5fec7b4.json  pre-commit-test-compact.md  pre-commit-test.md  test_cli.py  test_parse.py  test_spec.py
