[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "mdformat_tables"
author = "Chris Sewell"
author-email = "executablebooks@gmail.com"
description-file = "README.md"
home-page = "https://github.com/executablebooks/mdformat-tables"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = "mdformat,markdown,markdown-it"

requires-python=">=3.7.0"
requires=["mdformat>=0.7.5,<0.8.0", "wcwidth>=0.2.13"]

[tool.flit.metadata.requires-extra]
test = [
    "pytest~=6.0",
    "coverage",
    "pytest-cov",
]

[tool.flit.entrypoints."mdformat.parser_extension"]
tables = "mdformat_tables"

[tool.flit.sdist]
include = []
exclude = [".github/", "tests/"]

[tool.isort]
# Force imports to be sorted by module, independent of import type
force_sort_within_sections = true
# Group first party and local folder imports together
no_lines_before = ["LOCALFOLDER"]

# Configure isort to work without access to site-packages
known_first_party = ["mdformat_tables", "tests"]

# Settings for Black compatibility
profile = "black"
